--- a/app/templates/inventory_management/deliveries.html
+++ b/app/templates/inventory_management/deliveries.html
@@ -54,6 +54,9 @@
 					</div>
 					<div class="modal-body">
 						<div class="form-group required">
+							{{ form.supplier.label (class_="control-label") }}
+							{{ form.supplier (class_="form-control modal-form-number") }}
+							
 							{{ form.delivery_no.label (class_="control-label") }}
 							{{ form.delivery_no (class_="form-control modal-form-number") }}
 						</div>
