--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,13 +30,13 @@
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<!--li><a href="{{ url_for('explore')}}">Explore</a></li-->{{ nav_link('explore', 'Explore') }}
-					<!--li><a href="{{ url_for('calculators')}}">Calculators</a></li-->{{ nav_link('calculators', 'Calculators') }}
-					<!--li><a href="{{ url_for('quality_control_sample')}}">Quality Control</a></li-->{{ nav_link('quality_control_sample', 'Quality Control') }}
+					{{ nav_link('explore', 'Explore') }}
+					{{ nav_link('calculators', 'Calculators') }}
+					{{ nav_link('quality_control_sample', 'Quality Control') }}
 					{% if user == superuser %}
-					<!--li><a href="{{ url_for('document_control_sample') }}">Document Control</a></li-->{{ nav_link('document_control_sample', 'Document Control') }}
+					{{ nav_link('document_control_sample', 'Document Control') }}
 					{% endif %}
-					<!--li><a href="{{ url_for('inventory_management_sample')}}">Inventory</a></li-->{{ nav_link('inventory_management_sample', 'Inventory Management') }}
+					{{ nav_link('inventory_management_sample', 'Inventory Management') }}
 					{% if current_user.is_authenticated %}
 					{% if users %}
 					<li><input type="text" class="form-control" id="search_bar" placeholder="Search" style="margin-top: 10px;"></li>
