--- a/app/templates/company_profile.html
+++ b/app/templates/company_profile.html
@@ -2,10 +2,12 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Register</h1>
+    <h1>Company Profile</h1>
     <div class="row">
+		<div class="col-md-3"></div>
         <div class="col-md-6">
-			{{ wtf.quick_form(form) }}
+            {{ wtf.quick_form(form) }}
         </div>
+		<div class="col-md-3"></div>
     </div>
 {% endblock %}
